Modify 01_Intro slides

--- a/notebooks/01_Intro.ipynb
+++ b/notebooks/01_Intro.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -14,9 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- Applications of Machine Learning\n",
     "- Python libraries for Machine Learning\n",
@@ -42,7 +39,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/benign_malignant.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/benign_malignant.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -54,6 +53,7 @@
    },
    "source": [
     "Human cell sample extracted from a patient.\n",
+    "\n",
     "The cell has characteristics like Clump thickness, Uniformity of cell size, Marginal adhesion, and so on."
    ]
   },
@@ -66,9 +66,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    ">In contrast with a benign tumor, a malignant tumor is a tumor that may invade its surrounding tissue or spread around the body, and diagnosing it early might be the key to a patient’s survival."
+    "In contrast with a benign tumor, a malignant tumor is a tumor that may invade its surrounding tissue or spread around the body, and diagnosing it early might be the key to a patient’s survival."
    ]
   },
   {
@@ -91,7 +95,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/model_prediction.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/model_prediction.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -159,7 +165,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/how_ml_works.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/how_ml_works.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -406,7 +414,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/ml_libraries.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/ml_libraries.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -417,7 +427,7 @@
     }
    },
    "source": [
-    "## scilit-learn"
+    "## scikit-learn"
    ]
   },
   {
@@ -428,7 +438,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/scilit-learn.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/scikit-learn.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -439,7 +451,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/sklearn_functions.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/sklearn_functions.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -472,7 +486,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/supervised.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/supervised.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -483,7 +499,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/labeled_data.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/labeled_data.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -494,7 +512,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/observation.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/observation.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -505,7 +525,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/supervised_types.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/supervised_types.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -516,7 +538,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/classification.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/classification.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -527,7 +551,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/regression.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/regression.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -549,7 +575,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/unsupervised.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/unsupervised.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -560,7 +588,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/clustering.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/clustering.png\", width=800, height=600>\n",
+    "</p>"
    ]
   },
   {
@@ -582,7 +612,9 @@
     }
    },
    "source": [
-    "![](../images/01_Intro/supervised_vs_unsupervised.png)"
+    "<p align=\"center\"> \n",
+    "<img src=\"../images/01_Intro/supervised_vs_unsupervised.png\", width=800, height=600>\n",
+    "</p>"
    ]
   }
  ],
