--- a/presentations/deliver.ipynb
+++ b/presentations/deliver.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "# Machine Learning with Python Workshop \n",
     "\n",
-    "### Ayman Ibrahim, PMP\n",
+    "### Ayman Ibrahim\n",
     "[GitHub](https://github.com/aymanibrahim) [LinkedIn](https://www.linkedin.com/in/aymanibrahim/) [Kaggle](https://www.kaggle.com/aymani) [Twitter](https://twitter.com/AymanIbrahim) [Facebook](https://www.facebook.com/ayman.ibrahim.awad)"
    ]
   },
@@ -384,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
